small visible fixes

--- a/assets/ananke/css/custom.css
+++ b/assets/ananke/css/custom.css
@@ -161,12 +161,17 @@ header .site-title a:hover {
 
 /* Увеличиваем расстояние между ссылками в меню */
 nav a {
-    margin-left: 0.25rem !important;
-    margin-right: 0.25rem !important;
+    margin-left: 0.1rem !important;
+    margin-right: 0.1rem !important;
     margin-top: 0.25rem !important;
 }
 
 nav ul li {
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
+    padding-left: 0.6rem !important;
+    padding-right: 0.6rem !important;
+    border-right: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+nav ul li:last-child {
+    border-right: none;
 }
